# Crawfish

./: .gitignore  AgentGraph-PRD.docx  Cargo.toml  Crawfish-PRD.docx  Crawfish-PRD.source.html  LICENSE-APACHE  LICENSE-MIT  README.md  rust-toolchain.toml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  SUPPORT.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
crates/crawfish-a2a/: Cargo.toml
crates/crawfish-a2a/src/: lib.rs
crates/crawfish-adapter-api/: Cargo.toml
crates/crawfish-adapter-api/src/: lib.rs
crates/crawfish-cli/: Cargo.toml
crates/crawfish-cli/src/: lib.rs
crates/crawfish-cli/tests/: cli.rs
crates/crawfish-core/: Cargo.toml
crates/crawfish-core/src/: action.rs  api.rs  config.rs  contract.rs  governance.rs  lib.rs  lifecycle.rs  traits.rs
crates/crawfish-harness-local/: Cargo.toml
crates/crawfish-harness-local/src/: lib.rs
crates/crawfish-mcp/: Cargo.toml
crates/crawfish-mcp/src/: lib.rs
crates/crawfish-openclaw/: Cargo.toml
crates/crawfish-openclaw/src/: lib.rs
crates/crawfish-runtime/: Cargo.toml
crates/crawfish-runtime/src/: actions.rs  api.rs  evaluation.rs  execution.rs  governance.rs  hero.rs  lib.rs  remote.rs  supervisor.rs
crates/crawfish-runtime/src/tests/: actions.rs  evaluation.rs  execution.rs  governance.rs  mod.rs  remote.rs  support.rs
crates/crawfish-store-sqlite/: Cargo.toml
crates/crawfish-store-sqlite/migrations/: 0001_initial.sql  0002_action_runtime_state.sql  0003_governance_runtime.sql  0004_doctrine_evaluation.sql  0005_dataset_eval_ops.sql  0006_a2a_treaties.sql  0007_pairwise_eval_ops.sql  0008_remote_evidence_bundles.sql  0009_remote_followup_requests.sql
crates/crawfish-store-sqlite/src/: lib.rs
crates/crawfish-types/: Cargo.toml
crates/crawfish-types/src/: lib.rs
docs/: README.md  architecture.md
docs/experimental/: README.md
docs/exports/: Crawfish-PRD.docx
docs/project/: CHANGELOG.md
docs/spec/: architecture.md  glossary.md  philosophy.md  v0.1-plan.md  vision.md
examples/experimental/remote-swarm/: demo.sh
examples/experimental/remote-swarm/agents/: ci_triage.toml  repo_reviewer.toml  task_planner.toml  workspace_editor.toml
examples/hero-fleet/: Crawfish.toml  demo.sh
examples/hero-fleet/agents/: ci_triage.toml  coding_planner.toml  incident_enricher.toml  repo_indexer.toml  repo_reviewer.toml
examples/hero-fleet/data/: service-manifest.toml
examples/hero-swarm/: Crawfish.toml  demo.sh
examples/hero-swarm/agents/: incident_enricher.toml  task_planner.toml
integrations/openclaw-inbound/: README.md  package-lock.json  package.json
integrations/openclaw-inbound/src/: client.ts  index.ts  server.ts  types.ts
integrations/openclaw-inbound/tests/: bridge.test.ts
scripts/: export_docset.py
