[workspace]
members = [
  "crates/crawfish-types",
  "crates/crawfish-core",
  "crates/crawfish-store-sqlite",
  "crates/crawfish-runtime",
  "crates/crawfish-cli",
  "crates/crawfish-mcp",
  "crates/crawfish-adapter-api",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.1.0-alpha.1"
repository = "https://github.com/Meirtz/Crawfish"
homepage = "https://github.com/Meirtz/Crawfish"
documentation = "https://github.com/Meirtz/Crawfish"
rust-version = "1.88.0"
authors = ["Meirtz"]

[workspace.dependencies]
anyhow = "1.0.98"
assert_cmd = "2.0.17"
async-trait = "0.1.88"
clap = { version = "4.5.37", features = ["derive", "env"] }
predicates = "3.1.3"
rmcp = "1.1.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }
tempfile = "3.20.0"
thiserror = "2.0.16"
tokio = { version = "1.45.1", features = ["full"] }
toml = "0.8.23"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }

