[package]
name = "crawfish-store-sqlite"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
crawfish-core = { path = "../crawfish-core" }
crawfish-types = { path = "../crawfish-types" }
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true

